--- a/SyntaxTree/CMakeLists.txt
+++ b/SyntaxTree/CMakeLists.txt
@@ -8,17 +8,22 @@ project(SyntaxTree VERSION 1.0 LANGUAGES CXX)
 add_library(${PROJECT_NAME} STATIC
         src/TreeNodes.cpp
         include/INodeBase.h
+        include/TemplateNode/CloneNode.h
+        include/TemplateNode/ListNode.h
+        include/TypeNode/ITypeNode.h
+        include/TypeNode/TypeVoidNode.h
         include/TypeNode/TypeIntNode.h
         include/TypeNode/TypeBooleanNode.h
         include/TypeNode/TypeArrayNode.h
         include/TypeNode/TypeUserNode.h
+        include/IdentifierNode/IdentifierNode.h
         include/ExpressionNode/ExpressionIdentifierNode.h
         include/ExpressionNode/IExpressionNode.h
         include/ExpressionNode/ExpressionBinaryOperationNode.h
         include/ExpressionNode/ExpressionIndexNode.h
         include/ExpressionNode/ExpressionGetLengthNode.h
         include/ExpressionNode/ExpressionMethodCallNode.h
-        include/IdentifierNode/IdentifierNode.h
+        include/ExpressionNode/ExpressionStaticMethodCallNode.h
         include/ExpressionNode/ExpressionIntegerLiteralNode.h
         include/ExpressionNode/ExpressionThisNode.h
         include/ExpressionNode/ExpressionNewNode.h
@@ -26,20 +31,17 @@ add_library(${PROJECT_NAME} STATIC
         include/ExpressionNode/ExpressionBooleanLiteralNode.h
         include/ExpressionNode/ExpressionNotOperatorNode.h
         include/ExpressionNode/ExpressionRoundBracketsNode.h
-        include/TypeNode/ITypeNode.h
         include/StatementNode/IStatementNode.h
         include/StatementNode/StatementIfNode.h
         include/StatementNode/StatementWhileNode.h
         include/StatementNode/StatementPrintlnNode.h
         include/StatementNode/StatementAssignNode.h
         include/StatementNode/StatementAssignArrayNode.h
+        include/StatementNode/StatementReturnNode.h
         include/DeclarationNode/DeclarationMethodNode.h
         include/DeclarationNode/DeclarationClassNode.h
-        include/GoalNode/GoalNode.h
         include/DeclarationNode/PairTypeIdentifierNode.h
-        include/TemplateNode/CloneNode.h
-        include/TemplateNode/ListNode.h
-        include/ExpressionNode/ExpressionStaticMethodCallNode.h)
+        include/Goal/GoalNode.h include/TypeNode/TypeStringNode.h)
 
 set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
 include_directories(${COMMON_INCLUDES})
