--- a/SyntaxTree/CMakeLists.txt
+++ b/SyntaxTree/CMakeLists.txt
@@ -44,7 +44,7 @@ add_library(${PROJECT_NAME} STATIC
         include/Goal/GoalNode.h include/TypeNode/TypeStringNode.h)
 
 set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
-include_directories(${COMMON_INCLUDES})
+target_include_directories(${PROJECT_NAME} PUBLIC ${COMMON_INCLUDES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
 
