added clang static analyzer

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ compiler:
   - g++
 
 before_install:
+  - sudo apt-get install clang-tools
   - sudo apt-get install graphviz
   - sudo apt-get install cmake
   - sudo apt-get install libfl-dev
@@ -23,6 +24,6 @@ before_install:
 script:
   - mkdir build
   - cd build
-  - cmake ..
-  - cmake --build .
+  - scan-build cmake ..
+  - scan-build cmake --build .
   - sh ../run_tests.sh
