--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,6 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
-    packages:
-      - g++-6
 
 before_install:
   - pip install --user cpp-coveralls
@@ -27,7 +25,7 @@ before_install:
 script:
   - mkdir build
   - cd build
-  - CXX=/usr/bin/g++-6 CC=/usr/bin/gcc-6 cmake -DCOVERAGE=1 ..
+  - scan-build cmake -DCOVERAGE=1 ..
   - scan-build cmake --build .
   - cd tests
   - cp ../../run_tests.sh run_tests.sh
