--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,6 +36,10 @@ execut_test(PrintSyntaxTreeDot
         ${PROJECT_SOURCE_DIR}/tests/PrintSyntaxTreeDot.cpp)
 add_test_libraries(PrintSyntaxTreeDot BisonBuilder Visitors)
 
+execut_test(SymbolTableUnitTest
+        ${PROJECT_SOURCE_DIR}/tests/SymbolTableUnitTest.cpp)
+add_test_libraries(SymbolTableUnitTest SymbolTable)
+
 include_directories(${COMMON_INCLUDES})
 
 add_test(UnitTests RunAllUnitTests)
