add graphviz for symbol tree

--- a/SymbolTable/Graphviz/CMakeLists.txt
+++ b/SymbolTable/Graphviz/CMakeLists.txt
@@ -3,14 +3,13 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-project(SymbolTable VERSION 1.0 LANGUAGES CXX)
+project(SymbolTableGraphviz VERSION 1.0 LANGUAGES CXX)
 
 add_library(${PROJECT_NAME} STATIC
-        src/SymbolTableBuilder.cpp
-        include/SymbolTree.h
-        include/ClassInfo.h
-        include/MethodInfo.h
-        include/VarInfo.h)
+        src/SymbolTableGraphviz.cpp
+        )
+
+target_link_libraries(${PROJECT_NAME} SymbolTable)
 
 set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(${PROJECT_NAME} PUBLIC ${COMMON_INCLUDES})
@@ -19,7 +18,5 @@ target_link_libraries(${PROJECT_NAME} SyntaxTree)
 set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER
-        include/SymbolTableBuilder.h
+        include/SymbolTableGraphviz.h
         )
-
-add_subdirectory(Graphviz)
