--- a/IRTree/CMakeLists.txt
+++ b/IRTree/CMakeLists.txt
@@ -3,7 +3,7 @@
 project(IRTree VERSION 1.0 LANGUAGES CXX)
 
 add_library(${PROJECT_NAME} STATIC
-        src/IRTreeTranslator.cpp)
+        src/IRTreeTranslator.cpp include/IRTreeNode.h include/IRTreeVisitor.h)
 
 set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(${PROJECT_NAME} PUBLIC ${COMMON_INCLUDES})
