--- a/IRTree/CMakeLists.txt
+++ b/IRTree/CMakeLists.txt
@@ -3,7 +3,7 @@
 project(IRTree VERSION 1.0 LANGUAGES CXX)
 
 add_library(${PROJECT_NAME} STATIC
-        src/IRTreeTranslator.cpp include/IRTreeNode.h include/IRTreeVisitor.h include/IRTreeStatements.h)
+        ../SyntaxTree/Visitors/src/IRTreeTranslator.cpp include/IRTreeNode.h include/IRTreeVisitor.h include/IRTreeStatements.h)
 
 set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(${PROJECT_NAME} PUBLIC ${COMMON_INCLUDES})
@@ -12,5 +12,5 @@ target_link_libraries(${PROJECT_NAME} SymbolTable SyntaxTree)
 set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER
-        include/IRTreeTranslator.h
+        ../SyntaxTree/Visitors/include/IRTreeTranslator.h
         )
