--- a/SyntaxTree/Visitors/CMakeLists.txt
+++ b/SyntaxTree/Visitors/CMakeLists.txt
@@ -13,7 +13,7 @@ add_library(${PROJECT_NAME} STATIC
         src/TypeCheck.cpp
         include/TypeCheck.h)
 
-target_link_libraries(${PROJECT_NAME} SyntaxTree SymbolTable)
+target_link_libraries(${PROJECT_NAME} SyntaxTree SymbolTable IRTree)
 
 set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(${PROJECT_NAME} PUBLIC ${COMMON_INCLUDES})
