--- a/IRTree/Visitors/CMakeLists.txt
+++ b/IRTree/Visitors/CMakeLists.txt
@@ -6,10 +6,11 @@ cmake_minimum_required (VERSION 3.8)
 project(IrtVisitors VERSION 1.0 LANGUAGES CXX)
 
 add_library(${PROJECT_NAME} STATIC
-    src/IRTreePrinter.cpp
+        src/IRTreePrinter.cpp
+        ../../../SyntaxTree/Visitors/include/IRTreeGoal.h
 )
 
-target_link_libraries(${PROJECT_NAME} IRTree)
+target_link_libraries(${PROJECT_NAME} IRTree Visitors)
 
 set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(${PROJECT_NAME} PUBLIC ${COMMON_INCLUDES})
