--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,7 +46,7 @@ add_test_libraries(PrintSymbolTableDot SymbolTableGraphviz SymbolTable BisonBuil
 
 execut_test(IRTreeUnitTest
         ${PROJECT_SOURCE_DIR}/tests/IRTreeUnitTest.cpp)
-add_test_libraries(IRTreeUnitTest SyntaxTree IRTree SymbolTable BisonBuilder) #SyntaxTree
+add_test_libraries(IRTreeUnitTest SyntaxTree IRTree SymbolTable BisonBuilder Visitors) #SyntaxTree
 
 execut_test(SymbolTableTypeCheck
         ${PROJECT_SOURCE_DIR}/tests/SymbolTableTypeCheck.cpp)
