--- a/IRTree/CMakeLists.txt
+++ b/IRTree/CMakeLists.txt
@@ -7,9 +7,7 @@ add_library(${PROJECT_NAME} STATIC
         include/IRTree/Nodes.h
         include/IRTree/INodeBase.h
         include/IRTree/IVisitor.h
-        #include/IRTree/IRTreeWrappers.h
         include/StatementNode/IStatementNode.h
-        #src/IRTree/IRTreeWrappers.cpp
         src/IRTree/Nodes.cpp
         include/StatementNode/StatementExpressionNode.h
         include/ExpressionNode/IExpressionNode.h
@@ -32,11 +30,11 @@ add_library(${PROJECT_NAME} STATIC
         include/ExpressionNode/ExpressionLocalNode.h
         include/Wrapper/Wrapper.h
         include/Wrapper/Expression/WrapperExpressionBinaryOperation.h
-        ../Defines/Consts.h include/ExpressionNode/ExpressionTypeNode.h
         include/ExpressionNode/ExpressionCallNode.h
         ../Defines/CJumpCondition.h
         src/Wrapper/Expression/WrapperExpressionAnd.cpp
-        include/Wrapper/Expression/WrapperExpressionAnd.h)
+        include/Wrapper/Expression/WrapperExpressionAnd.h
+        include/IRTree/IRTreeGoal.h)
 
 set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(${PROJECT_NAME} PUBLIC ${COMMON_INCLUDES} ../Defines)
