--- a/IRTree/CMakeLists.txt
+++ b/IRTree/CMakeLists.txt
@@ -34,7 +34,7 @@ add_library(${PROJECT_NAME} STATIC
         ../Defines/CJumpCondition.h
         src/Wrapper/Expression/WrapperExpressionAnd.cpp
         include/Wrapper/Expression/WrapperExpressionAnd.h
-        include/IRTree/IRTreeGoal.h)
+        include/IRTree/IRTreeGoal.h include/Wrapper/Expression/WrapperExpressionNot.h)
 
 set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(${PROJECT_NAME} PUBLIC ${COMMON_INCLUDES} ../Defines)
