add call canonizator (not tested)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ get_directory_property(IS_SUBPROJECT PARENT_DIRECTORY)
 option(MYLIB_TESTING "Включить модульное тестирование" ON)
 option(MYLIB_COVERAGE "Включить измерение покрытия кода тестами" OFF)
 
-add_subdirectory(library)
-add_subdirectory(tests)
+#add_subdirectory(library)
+#add_subdirectory(tests)
 
 add_compile_options(
         -Werror #=unused-parameter
@@ -40,7 +40,7 @@ if(NOT CMAKE_CXX_EXTENSIONS)
     set(CMAKE_CXX_EXTENSIONS OFF)
 endif()
 
-add_subdirectory(BisonBuilder)
+#add_subdirectory(BisonBuilder)
 add_subdirectory(SyntaxTree)
 add_subdirectory(SymbolTable)
 add_subdirectory(IRTree)
