--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -50,6 +50,10 @@ execut_test(IRTreeUnitTest
         ${PROJECT_SOURCE_DIR}/tests/IRTreeUnitTest.cpp)
 add_test_libraries(IRTreeUnitTest SyntaxTree IRTree SymbolTable BisonBuilder Visitors IrtVisitors) #SyntaxTree
 
+execut_test(IRTreeCanonizationUnitTest
+        ${PROJECT_SOURCE_DIR}/tests/IRTreeCanonizationUnitTest.cpp)
+add_test_libraries(IRTreeUnitTest SyntaxTree IRTree SymbolTable BisonBuilder Visitors IrtVisitors) #SyntaxTree
+
 execut_test(SymbolTableTypeCheck
         ${PROJECT_SOURCE_DIR}/tests/SymbolTableTypeCheck.cpp)
 add_test_libraries(SymbolTableTypeCheck Visitors SymbolTable BisonBuilder)
