--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -54,6 +54,10 @@ execut_test(IRTreeCanonizationUnitTest
         ${PROJECT_SOURCE_DIR}/tests/IRTreeCanonizationUnitTest.cpp)
 add_test_libraries(IRTreeCanonizationUnitTest SyntaxTree IRTree SymbolTable BisonBuilder Visitors IrtVisitors)
 
+execut_test(IRTreeLinearizationUnitTest
+        ${PROJECT_SOURCE_DIR}/tests/IRTreeLinearizationUnitTest.cpp)
+add_test_libraries(IRTreeLinearizationUnitTest SyntaxTree IRTree SymbolTable BisonBuilder Visitors IrtVisitors)
+
 execut_test(SymbolTableTypeCheck
         ${PROJECT_SOURCE_DIR}/tests/SymbolTableTypeCheck.cpp)
 add_test_libraries(SymbolTableTypeCheck Visitors SymbolTable BisonBuilder)
